Activity Instance response extended with equation computed answer