@@ -19,12 +19,7 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 import com.google.gson.Gson;
@@ -49,13 +44,11 @@ import org.broadinstitute.ddp.db.dao.AuthDao;
 import org.broadinstitute.ddp.db.dao.FileUploadDao;
 import org.broadinstitute.ddp.db.dao.JdbiActivity;
 import org.broadinstitute.ddp.db.dao.JdbiActivityInstance;
-import org.broadinstitute.ddp.db.dao.JdbiQuestion;
 import org.broadinstitute.ddp.db.dao.JdbiUmbrellaStudy;
 import org.broadinstitute.ddp.db.dao.JdbiUser;
 import org.broadinstitute.ddp.db.dao.JdbiUserStudyEnrollment;
 import org.broadinstitute.ddp.db.dto.ActivityInstanceDto;
 import org.broadinstitute.ddp.db.dto.ActivityVersionDto;
-import org.broadinstitute.ddp.db.dto.QuestionDto;
 import org.broadinstitute.ddp.json.errors.ApiError;
 import org.broadinstitute.ddp.model.activity.definition.ContentBlockDef;
 import org.broadinstitute.ddp.model.activity.definition.FormActivityDef;
@@ -67,6 +60,8 @@ import org.broadinstitute.ddp.model.activity.definition.i18n.Translation;
 import org.broadinstitute.ddp.model.activity.definition.question.AgreementQuestionDef;
 import org.broadinstitute.ddp.model.activity.definition.question.CompositeQuestionDef;
 import org.broadinstitute.ddp.model.activity.definition.question.DateQuestionDef;
+import org.broadinstitute.ddp.model.activity.definition.question.DecimalQuestionDef;
+import org.broadinstitute.ddp.model.activity.definition.question.EquationQuestionDef;
 import org.broadinstitute.ddp.model.activity.definition.question.FileQuestionDef;
 import org.broadinstitute.ddp.model.activity.definition.question.PicklistGroupDef;
 import org.broadinstitute.ddp.model.activity.definition.question.PicklistOptionDef;
@@ -78,12 +73,14 @@ import org.broadinstitute.ddp.model.activity.definition.question.MatrixQuestionD
 import org.broadinstitute.ddp.model.activity.definition.question.TextQuestionDef;
 import org.broadinstitute.ddp.model.activity.definition.template.Template;
 import org.broadinstitute.ddp.model.activity.definition.template.TemplateVariable;
+import org.broadinstitute.ddp.model.activity.definition.types.DecimalDef;
 import org.broadinstitute.ddp.model.activity.definition.validation.DateFieldRequiredRuleDef;
 import org.broadinstitute.ddp.model.activity.definition.validation.DateRangeRuleDef;
 import org.broadinstitute.ddp.model.activity.definition.validation.LengthRuleDef;
 import org.broadinstitute.ddp.model.activity.definition.validation.RequiredRuleDef;
 import org.broadinstitute.ddp.model.activity.instance.ActivityInstance;
 import org.broadinstitute.ddp.model.activity.instance.answer.CompositeAnswer;
+import org.broadinstitute.ddp.model.activity.instance.answer.DecimalAnswer;
 import org.broadinstitute.ddp.model.activity.instance.answer.FileAnswer;
 import org.broadinstitute.ddp.model.activity.instance.answer.TextAnswer;
 import org.broadinstitute.ddp.model.activity.revision.RevisionMetadata;
@@ -114,7 +111,6 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 
 public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite.TestCaseWithCacheEnabled {
-
     public static final String TEXT_QUESTION_STABLE_ID = "TEXT_Q";
 
     public static final String MIME_TYPE_1 = "image/gif";
@@ -142,9 +138,7 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
     private static String essayQuestionStableId;
     private static String activityCode;
     private static long activityId;
-    private static QuestionDto answeredQuestionDto;
     private static TextQuestionDef txt1;
-    private static TextQuestionDef txt2;
     private static CompositeQuestionDef comp1;
     private static FileUpload upload;
 
@@ -193,7 +187,7 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
                 .setPlaceholderTemplate(placeholderTemplate)
                 .addValidation(new LengthRuleDef(newTemplate(), 5, 300))
                 .build();
-        txt2 = TextQuestionDef.builder(TextInputType.TEXT, "TEXT_DRUG", newTemplate())
+        TextQuestionDef txt2 = TextQuestionDef.builder(TextInputType.TEXT, "TEXT_DRUG", newTemplate())
                 .setSuggestionType(SuggestionType.DRUG)
                 .build();
         Template txt3Tmpl = Template.html("$foo $ddp.participantFirstName()'s favorite color?");
@@ -217,7 +211,7 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
                 .build();
         PicklistQuestionDef p3 = PicklistQuestionDef
                 .buildMultiSelect(PicklistRenderMode.LIST, "PL_GROUPS", newTemplate())
-                .addGroup(new PicklistGroupDef("G1", newTemplate(), Arrays.asList(
+                .addGroup(new PicklistGroupDef("G1", newTemplate(), List.of(
                         new PicklistOptionDef(null, "G1_OPT1", newTemplate(),
                                 Template.text("option tooltip"), null, false, false))))
                 .addGroup(new PicklistGroupDef("G2", newTemplate(), Arrays.asList(
@@ -259,7 +253,7 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
                 null,
                 newTemplate("info header"),
                 newTemplate("info footer"),
-                Arrays.asList(new RequiredRuleDef(newTemplate())),
+                List.of(new RequiredRuleDef(newTemplate())),
                 true,
                 false);
         FormSectionDef agreementSection = new FormSectionDef(null, TestUtil.wrapQuestions(a1));
@@ -325,6 +319,22 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
 
         FormSectionDef matrixSection = new FormSectionDef(null, TestUtil.wrapQuestions(mqf1, mqf2));
 
+        //------------- create SECTION[10] ---------
+        final DecimalQuestionDef decimalDef = DecimalQuestionDef
+                .builder("DECIMAL_QUESTION", Template.text("This is value"))
+                .setScale(2)
+                .build();
+
+        final EquationQuestionDef equationDef = EquationQuestionDef.builder()
+                .stableId("EQUATION_QUESTION")
+                .questionType(QuestionType.EQUATION)
+                .promptTemplate(new Template(TemplateType.TEXT, null, "Equation"))
+                .validations(new ArrayList<>())
+                .expression("5 * " + decimalDef.getStableId())
+                .build();
+
+        FormSectionDef numericSection = new FormSectionDef(null, TestUtil.wrapQuestions(decimalDef, equationDef));
+
         //------------- create STUDY ACTIVITY ---------
         String parentActCode = "ACT_ROUTE_PARENT" + Instant.now().toEpochMilli();
         activityCode = "ACT_ROUTE_ACT" + Instant.now().toEpochMilli();
@@ -348,6 +358,7 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
                 .addSection(compSection)
                 .addSection(fileSection)
                 .addSection(matrixSection)
+                .addSection(numericSection)
                 .build();
         activityVersionDto = handle.attach(ActivityDao.class).insertActivity(
                 parentActivity, List.of(activity), RevisionMetadata.now(testData.getUserId(), "add " + activityCode)
@@ -370,7 +381,10 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
 
         answerDao.createAnswer(testData.getUserId(), instanceDto.getId(),
                 new TextAnswer(null, txt1.getStableId(), null, "valid answer"));
-        answeredQuestionDto = handle.attach(JdbiQuestion.class).findQuestionDtoById(txt1.getQuestionId()).get();
+
+        answerDao.createAnswer(testData.getUserId(), instanceDto.getId(),
+                new DecimalAnswer(null, decimalDef.getStableId(), null, new DecimalDef(2)));
+
 
         var compAnswer = new CompositeAnswer(null, comp1.getStableId(), null);
         compAnswer.addRowOfChildAnswers(new TextAnswer(null, comp1.getChildren().get(0).getStableId(), null, "comp child"));
@@ -607,6 +621,41 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
     }
 
     @Test
+    public void testGet_decimalQuestion() {
+        Response resp = testFor200AndExtractResponse();
+
+        resp.then().assertThat()
+                .body("sections.size()", equalTo(activity.getSections().size()))
+                .body("sections[10].blocks.size()", equalTo(2));
+
+        resp.then().assertThat()
+                .root("sections[10].blocks[0].question")
+                .body("questionType", equalTo(QuestionType.DECIMAL.toString()))
+                .body("stableId", equalTo("DECIMAL_QUESTION"))
+                .body("answers.size()", equalTo(1))
+                .body("answers[0].value.value", equalTo(2000000000000000L))
+                .body("answers[0].value.scale", equalTo(15));
+    }
+
+    @Test
+    public void testGet_equationQuestion() {
+        Response resp = testFor200AndExtractResponse();
+
+        resp.then().assertThat()
+                .body("sections.size()", equalTo(activity.getSections().size()))
+                .body("sections[10].blocks.size()", equalTo(2));
+
+        resp.then().assertThat()
+                .root("sections[10].blocks[1].question")
+                .body("questionType", equalTo(QuestionType.EQUATION.toString()))
+                .body("stableId", equalTo("EQUATION_QUESTION"))
+                .body("answers.size()", equalTo(1))
+                .body("answers.value.size()", equalTo(1))
+                .body("answers[0].value[0].value", equalTo(1000000000000000L))
+                .body("answers[0].value[0].scale", equalTo(14));
+    }
+
+    @Test
     public void testQuestionNumbering() {
         Response resp = testFor200AndExtractResponse();
         resp.then().assertThat()
@@ -622,10 +671,6 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
                 .body("sections[1].blocks[0].question.answers[0].value", equalTo("valid answer"));
         resp.then().assertThat()
                 .body("sections[1].blocks[0].question.answers[0].type", equalTo("TEXT"));
-        //        resp.then().assertThat()
-        //                .body("sections[1].blocks[0].question.answers[0]", hasKey("type"));
-        //        resp.then().assertThat()
-        //                .body("sections[1].blocks[0].question.answers[0]", not(hasKey("questionStableId")));
     }
 
     @Test
@@ -859,49 +904,41 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
     @Test
     public void testGet_activityInstanceReadonlyForExitedUser() {
         TransactionWrapper.useTxn(
-                handle -> {
-                    handle.attach(JdbiUserStudyEnrollment.class).changeUserStudyEnrollmentStatus(
-                            testData.getUserGuid(),
-                            testData.getStudyGuid(),
-                            EnrollmentStatusType.EXITED_BEFORE_ENROLLMENT
-                    );
-                }
+                handle -> handle.attach(JdbiUserStudyEnrollment.class).changeUserStudyEnrollmentStatus(
+                        testData.getUserGuid(),
+                        testData.getStudyGuid(),
+                        EnrollmentStatusType.EXITED_BEFORE_ENROLLMENT
+                )
         );
         Response resp = testFor200AndExtractResponse();
 
         resp.then().assertThat().body("readonly", equalTo(true));
 
         TransactionWrapper.useTxn(
-                handle -> {
-                    handle.attach(JdbiUserStudyEnrollment.class).changeUserStudyEnrollmentStatus(
-                            testData.getUserGuid(),
-                            testData.getStudyGuid(),
-                            EnrollmentStatusType.ENROLLED
-                    );
-                }
+                handle -> handle.attach(JdbiUserStudyEnrollment.class).changeUserStudyEnrollmentStatus(
+                        testData.getUserGuid(),
+                        testData.getStudyGuid(),
+                        EnrollmentStatusType.ENROLLED
+                )
         );
     }
 
     @Test
     public void given_oneTrueExpr_whenRouteIsCalled_thenItReturnsOkAndResponseDoesntContainFailedValidations() {
         try {
-            TransactionWrapper.useTxn(handle -> {
-                handle.attach(JdbiActivity.class).insertValidation(
-                        RouteTestUtil.createActivityValidationDto(
-                                activity,
-                                "false", "Should never fail", List.of(txt1.getStableId())
-                        ),
-                        testData.getUserId(),
-                        testData.getStudyId(),
-                        activityVersionDto.getRevId()
-                );
-            });
+            TransactionWrapper.useTxn(handle -> handle.attach(JdbiActivity.class).insertValidation(
+                    RouteTestUtil.createActivityValidationDto(
+                            activity,
+                            "false", "Should never fail", List.of(txt1.getStableId())
+                    ),
+                    testData.getUserId(),
+                    testData.getStudyId(),
+                    activityVersionDto.getRevId()
+            ));
             testFor200()
                     .body("sections[1].blocks[0].question.validationFailures", is(nullValue()));
         } finally {
-            TransactionWrapper.useTxn(handle -> {
-                handle.attach(JdbiActivity.class).deleteValidationsByCode(activityId);
-            });
+            TransactionWrapper.useTxn(handle -> handle.attach(JdbiActivity.class).deleteValidationsByCode(activityId));
         }
     }
 
@@ -909,24 +946,20 @@ public class GetActivityInstanceRouteStandaloneTest extends IntegrationTestSuite
     public void given_oneTrueExpr_whenRouteIsCalled_thenItReturnsOkAndResponseContainsFailedValidations() {
         ActivityDefStore.getInstance().clear();
         try {
-            TransactionWrapper.useTxn(handle -> {
-                handle.attach(JdbiActivity.class).insertValidation(
-                        RouteTestUtil.createActivityValidationDto(
-                                activity,
-                                "true", "Should always fail", List.of(txt1.getStableId())
-                        ),
-                        testData.getUserId(),
-                        testData.getStudyId(),
-                        activityVersionDto.getRevId()
-                );
-            });
+            TransactionWrapper.useTxn(handle -> handle.attach(JdbiActivity.class).insertValidation(
+                    RouteTestUtil.createActivityValidationDto(
+                            activity,
+                            "true", "Should always fail", List.of(txt1.getStableId())
+                    ),
+                    testData.getUserId(),
+                    testData.getStudyId(),
+                    activityVersionDto.getRevId()
+            ));
             testFor200()
                     .body("sections[1].blocks[0].question.validationFailures", not(is(nullValue())))
                     .body("sections[1].blocks[0].question.validationFailures.size()", equalTo(1));
         } finally {
-            TransactionWrapper.useTxn(handle -> {
-                handle.attach(JdbiActivity.class).deleteValidationsByCode(activityId);
-            });
+            TransactionWrapper.useTxn(handle -> handle.attach(JdbiActivity.class).deleteValidationsByCode(activityId));
         }
     }
 
